tests: add installation and scripts for kselftests
Create a way to add kselftests to the initram fs.

Also create a expect script framework to start a sim target
telnet in and run tests.

Signed-off-by: Stafford Horne <shorne@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ initramfs/bin
 initramfs/sbin
 initramfs/usr/bin
 initramfs/usr/sbin
+initramfs/init
 
 # files installed from libc
 initramfs/lib
+
+# Linux selftests
+initramfs/kselftests
