--- a/config
+++ b/config
@@ -12,5 +12,5 @@ CROSS_COMPILE=or1k-musl-linux-
 BUSYBOX=$HOME/work/openrisc/busybox/_install
 
 # Location of your libc (if you want dynamic executables)
-LIBC=/opt/shorne/software/or1k-musl/or1k-linux-musl/or1k-linux-musl/lib/libc.so
+LIBC=/opt/shorne/software/or1k-linux-musl/or1k-linux-musl/lib
 
