or1k: glibc: add tests runner + configure debuggable builds

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -40,6 +40,8 @@ mkdir -p $SYSROOTDIR
 
 export PATH=$INSTALLDIR/bin:$PATH
 
+export CFLAGS="-g -Og"
+
 # 0 ../glibc.config               - this file sourced by others
 # 1 ../glibc.build.binutils
 # 2 ../glibc.build.linux-headers 
