or1k: glibc: fixup test scripts

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -22,6 +22,9 @@ LINUXDIR=$HOME/work/linux
 #  - /build-*      - build temporary files
 BUILDDIR=$HOME/work/gnu-toolchain
 
+# QEMU location to qemu binaries used for testing
+QEMU=$HOME/work/openrisc/qemu
+
 # where stuff is installed to (prefix vs sysroot?)
 INSTALLDIR=$BUILDDIR/local
 SYSROOTDIR=$BUILDDIR/sysroot
