glibc: update glibc scripts to support FPU build
Also, just add in the coremark script

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -1,6 +1,9 @@
 #!/bin/bash
 
-set -ex
+## For debug
+# set -x
+## Fail fast
+set -e
 
 # Build steps from https://pmc.polytechnique.fr/pagesperso/dc/arm-en.html
 # Also:
