glibc: Add chroot environment for running tests

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -28,6 +28,9 @@ BUILDDIR=$HOME/work/gnu-toolchain
 # QEMU location to qemu binaries used for testing
 QEMU=$HOME/work/openrisc/qemu
 
+# BUSY box for chroot environment
+BUSYBOX=$HOME/work/openrisc/or1k-utils/initramfs/bin/busybox
+
 # where stuff is installed to (prefix vs sysroot?)
 INSTALLDIR=$BUILDDIR/local
 SYSROOTDIR=$BUILDDIR/sysroot
