glibc: fixup scripts, mail notification, keep build-glibc for chroot

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -3,7 +3,7 @@
 ## For debug
 # set -x
 ## Fail fast
-set -e
+# set -e
 
 # Build steps from https://pmc.polytechnique.fr/pagesperso/dc/arm-en.html
 # Also:
@@ -28,8 +28,11 @@ BUILDDIR=$HOME/work/gnu-toolchain
 # QEMU location to qemu binaries used for testing
 QEMU=$HOME/work/openrisc/qemu
 
+# Where we live
+OR1K_UTILS=$HOME/work/openrisc/or1k-utils
+
 # BUSY box for chroot environment
-BUSYBOX=$HOME/work/openrisc/or1k-utils/initramfs/bin/busybox
+BUSYBOX=$OR1K_UTILS/initramfs/bin/busybox
 
 # where stuff is installed to (prefix vs sysroot?)
 INSTALLDIR=$BUILDDIR/local
@@ -43,13 +46,21 @@ SYSROOTDIR=$BUILDDIR/sysroot
 #  - abi    - gnu for glibc
 CROSS=or1k-smh-linux-gnu
 
+# Optional for test notifications
+MAILTO=${MAILTO:-shorne@gmail.com}
+
+# Multiplied for how long to wait for hung tests to fail (not sure of scale)
+TIMEOUTFACTOR=${TIMEOUTFACTOR:-10}
+
 # Bootstrap the environment for our scripts
 mkdir -p $INSTALLDIR
 mkdir -p $SYSROOTDIR
 
-export PATH=$INSTALLDIR/bin:$PATH
+export PATH=$INSTALLDIR/bin:$OR1K_UTILS/glibc:$PATH
 
+# Clean up compiler flags
 export CFLAGS="-g -Og"
+export LDFLAGS=""
 
 # 0 ../glibc.config               - this file sourced by others
 # 1 ../glibc.build.binutils
