--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -48,6 +48,9 @@ CROSS=or1k-smh-linux-gnu
 
 # Optional for test notifications
 MAILTO=${MAILTO:-shorne@gmail.com}
+if [ $MAILTO == 'n' ] ; then
+  MAILTO=
+fi
 
 # Multiplied for how long to wait for hung tests to fail (not sure of scale)
 TIMEOUTFACTOR=${TIMEOUTFACTOR:-10}
