or1k: add more build scripts for linux and chroot envs, explain tests
Added a helpful facility to the test reporting to suppress output of
tests that are known to fail in the CHROOT environment but work
when running on native linux.

Libc tests are down to 9 unexplained tests.

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -48,7 +48,7 @@ CROSS=or1k-smh-linux-gnu
 
 # Optional for test notifications
 MAILTO=${MAILTO:-shorne@gmail.com}
-if [ $MAILTO == 'n' ] ; then
+if [ "$NOTIFY" == 'n' ] ; then
   MAILTO=
 fi
 
