glibc: Update build scripts add readme

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -21,7 +21,7 @@ LINUXDIR=$HOME/work/linux
 # BUILDDIR where evertying lives
 #  - /gcc          - my gcc git repo
 #  - /binutils-gdb - my binutils git repo
-#  - /glibc        - my glibc git repo 
+#  - /glibc        - my glibc git repo
 #  - /build-*      - build temporary files
 BUILDDIR=$HOME/work/gnu-toolchain
 
@@ -65,9 +65,11 @@ export PATH=$INSTALLDIR/bin:$OR1K_UTILS/glibc:$PATH
 export CFLAGS="-g -Og"
 export LDFLAGS=""
 
+# Just run glibc.build
+# it will run:
 # 0 ../glibc.config               - this file sourced by others
 # 1 ../glibc.build.binutils
-# 2 ../glibc.build.linux-headers 
+# 2 ../glibc.build.linux-headers
 # 3 ../glibc.build.gcc1
 # 4 ../glibc.build.libc-headers   - glibc headers/then glibc
 # 5 ../glibc.build.gcc1.5
