--- a/buildroot/configs/litex_mor1kx_defconfig
+++ b/buildroot/configs/litex_mor1kx_defconfig
@@ -2,8 +2,7 @@ BR2_or1k=y
 BR2_ENABLE_DEBUG=y
 BR2_OPTIMIZE_2=y
 BR2_PIC_PIE=y
-BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_PACKAGE_GLIBC_UTILS=y
+BR2_TOOLCHAIN_BUILDROOT_MUSL=y
 BR2_BINUTILS_VERSION_2_35_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_ISSUE="Welcome to Linux on LiteX-mor1kx"
@@ -11,17 +10,14 @@ BR2_INIT_SYSV=y
 BR2_SYSTEM_BIN_SH_BASH=y
 BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_LITEX_MOR1KX_PATH)/board/litex_mor1kx/users"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_LITEX_MOR1KX_PATH)/board/litex_mor1kx/rootfs_overlay"
-BR2_PACKAGE_GDB=y
-BR2_PACKAGE_GDB_SERVER=y
-BR2_PACKAGE_GDB_DEBUGGER=y
-BR2_PACKAGE_GDB_TUI=y
-BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_PYTHON3=y
+# BR2_PACKAGE_PYTHON3_UNICODEDATA is not set
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_WTMP=y
 BR2_PACKAGE_DROPBEAR_LASTLOG=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_SNTP=y
+# BR2_PACKAGE_NTP_NTPD is not set
 BR2_PACKAGE_NTP_NTPQ=y
 BR2_PACKAGE_COREUTILS=y
 BR2_PACKAGE_PROCPS_NG=y
