buildroot: Update buildroot docs, add setup for fstab

--- a/buildroot/configs/litex_mor1kx_defconfig
+++ b/buildroot/configs/litex_mor1kx_defconfig
@@ -1,26 +1,26 @@
 BR2_or1k=y
 BR2_ENABLE_DEBUG=y
 BR2_OPTIMIZE_2=y
-BR2_PIC_PIE=y
 BR2_TOOLCHAIN_BUILDROOT_MUSL=y
-BR2_BINUTILS_VERSION_2_35_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_ISSUE="Welcome to Linux on LiteX-mor1kx"
 BR2_INIT_SYSV=y
 BR2_SYSTEM_BIN_SH_BASH=y
 BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_LITEX_MOR1KX_PATH)/board/litex_mor1kx/users"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_LITEX_MOR1KX_PATH)/board/litex_mor1kx/rootfs_overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_LITEX_MOR1KX_PATH)/board/litex_mor1kx/post-build.sh"
+BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_PYTHON3=y
 # BR2_PACKAGE_PYTHON3_UNICODEDATA is not set
-BR2_PACKAGE_DROPBEAR=y
-BR2_PACKAGE_DROPBEAR_WTMP=y
-BR2_PACKAGE_DROPBEAR_LASTLOG=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_SNTP=y
 # BR2_PACKAGE_NTP_NTPD is not set
 BR2_PACKAGE_NTP_NTPQ=y
+BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_COREUTILS=y
 BR2_PACKAGE_PROCPS_NG=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
-# BR2_TARGET_ROOTFS_TAR is not set
+BR2_TARGET_ROOTFS_EXT2=y
+BR2_TARGET_ROOTFS_EXT2_4=y
+BR2_TARGET_ROOTFS_TAR_GZIP=y
