glibc: Add THREADS for make, add status to email
Other things include:
 - Add gmp-native, needed by gdb (binutils-native) now
 - Update tests explained, many tests fixed
 - add protobuf.build, for testing compiler/toolchain bugs

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -46,6 +46,9 @@ SYSROOTDIR=$BUILDDIR/sysroot
 #  - abi    - gnu for glibc
 CROSS=or1k-smh-linux-gnu
 
+# Argument for make -j${THREADS}
+THREADS=12
+
 # Optional for test notifications
 MAILTO=${MAILTO:-shorne@gmail.com}
 if [ "$NOTIFY" == 'n' ] ; then
