litex: Update args to allow for sdcard booting
As per PR: https://github.com/enjoy-digital/litex/pull/1032

--- a/litex/tftpd/Makefile
+++ b/litex/tftpd/Makefile
@@ -4,11 +4,15 @@
 #  clean        : removes everything
 
 LITEX_HOME := $(HOME)/work/litex
-JSON2DTS   := $(LITEX_HOME)/litex/litex/tools/litex_json2dts.py
+JSON2DTS   := $(LITEX_HOME)/litex/litex/tools/litex_json2dts_linux.py
+# ROOTFS set disabled to disable intrd, set to something like
+#        rootfs.cpio.gz.  To have the generator calculate the size.
+ROOTFS     := disabled
 
 initrd_start_hex = $(shell grep rootfs.cpio.gz boot.json | grep -o "0x[0-9]\+")
 initrd_start = $(shell printf "%d" $(initrd_start_hex))
-initrd_size  = $(shell stat --format=%s rootfs.cpio.gz)
+# We no longer need to calculate the size, its done by the generator
+# initrd_size  = $(shell stat --format=%s rootfs.cpio.gz)
 
 .PHONY: all clean
 
@@ -20,6 +24,6 @@ clean:
 litex-mor1kx.dtb: litex-mor1kx.dts
 	dtc $< > $@
 
-litex-mor1kx.dts: litex-mor1kx-csr.json boot.json rootfs.cpio.gz
-	$(JSON2DTS) --initrd-start $(initrd_start) --initrd-size $(initrd_size) $< > $@
+litex-mor1kx.dts: litex-mor1kx-csr.json boot.json rootfs.cpio.gz $(JSON2DTS)
+	$(JSON2DTS) --initrd-start $(initrd_start) --initrd $(ROOTFS) --root-device mmcblk0p3 $< > $@
 
