glibc: current master required O2 so use it

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -65,7 +65,8 @@ mkdir -p $SYSROOTDIR
 export PATH=$INSTALLDIR/bin:$OR1K_UTILS/glibc:$PATH
 
 # Clean up compiler flags
-export CFLAGS="-g -Og"
+#export CFLAGS="-g -Og"
+export CFLAGS="-g -O2"
 export LDFLAGS=""
 
 # Just run glibc.build
