glibc: Add support for fpu build

--- a/glibc/glibc.config
+++ b/glibc/glibc.config
@@ -44,7 +44,8 @@ SYSROOTDIR=$BUILDDIR/sysroot
 #  - vendor - me stafford mitchell horne (ignored by everything)
 #  - os     - um linux of course
 #  - abi    - gnu for glibc
-CROSS=or1k-smh-linux-gnu
+#CROSS=or1k-smh-linux-gnu
+CROSS=or1k-smhfpu-linux-gnu
 
 # Argument for make -j${THREADS}
 THREADS=12
@@ -66,6 +67,7 @@ export PATH=$INSTALLDIR/bin:$OR1K_UTILS/glibc:$PATH
 
 # Clean up compiler flags
 #export CFLAGS="-g -Og"
+#export CFLAGS="-g -O2"
 export CFLAGS="-g -O2"
 export LDFLAGS=""
 
