misc: Misc updates to initramfs, openocd, or1ksim (not sure)
I haven't used this for a while.

--- a/or1ksim.cfg
+++ b/or1ksim.cfg
@@ -125,7 +125,7 @@ section memory
   ce = 1
   mc = 0
   baseaddr = 0x00000000
-  size = 0x02000000
+  size = 0x04000000
   delayr = 1
   delayw = 1
 end
@@ -467,6 +467,7 @@ section cpu
   hazards = 0
   dependstats = 0
   sbuf_len = 0
+  hardfloat = 1
 end
 
 
@@ -719,7 +720,7 @@ section ethernet
   /* rx_channel = 1 */
   rxfile = "eth0.rx"
   txfile = "eth0.tx"
-  sockif = "eth0"
+  /* sockif = "eth0" */
 end
 
 
