--- a/openocd/de0_nano.cfg
+++ b/openocd/de0_nano.cfg
@@ -6,7 +6,7 @@ source [find interface/altera-usb-blaster.cfg]
 #reset_config trst_and_srst
 #jtag_rclk 8
 
-#set TAP_TYPE VJTAG
-set TAP_TYPE VJTAG_SMP
+set TAP_TYPE VJTAG
+#set TAP_TYPE VJTAG_SMP
 
 source [find board/or1k_generic.cfg]
