toolchains: Add musl tools, update readme

--- a/toolchains/glibc.config
+++ b/toolchains/glibc.config
@@ -44,7 +44,7 @@ SYSROOTDIR=$BUILDDIR/sysroot
 #  - vendor - me stafford mitchell horne (ignored by everything)
 #  - os     - um linux of course
 #  - abi    - gnu for glibc
-CROSS=or1k-smh-linux-gnu
+CROSS=${CROSS:-or1k-smh-linux-gnu}
 #CROSS=or1k-smhfpu-linux-gnu
 
 # Argument for make -j${THREADS}
