--- a/toolchains/newlib.config
+++ b/toolchains/newlib.config
@@ -19,13 +19,10 @@
 #  - /binutils-gdb - my binutils git repo
 #  - /newlib       - my newlib git repo
 #  - /build-*      - build temporary files
-BUILDDIR=$HOME/work/gnu-toolchain
-
-# Where we live
-OR1K_UTILS=$HOME/work/openrisc/or1k-utils
+BUILDDIR=${BUILDDIR:-$HOME/work/gnu-toolchain}
 
 # where stuff is installed to (prefix vs sysroot?)
-INSTALLDIR=$BUILDDIR/local
+INSTALLDIR=${INSTALLDIR:-$BUILDDIR/local}
 
 # Cross compile toolchain
 #  - target (arch)-(vendor)-(os)-(abi)
@@ -47,7 +44,7 @@ fi
 # Bootstrap the environment for our scripts
 mkdir -p $INSTALLDIR
 
-export PATH=$INSTALLDIR/bin:$OR1K_UTILS/glibc:$PATH
+export PATH=$INSTALLDIR/bin:$PATH
 
 # Clean up compiler flags
 #export CFLAGS="-g -Og"
