newlib: Split gdb out for stable builds

--- a/toolchains/newlib.config
+++ b/toolchains/newlib.config
@@ -20,6 +20,23 @@
 #  - /newlib       - my newlib git repo
 #  - /build-*      - build temporary files
 BUILDDIR=${BUILDDIR:-$HOME/work/gnu-toolchain}
+# Source locations, which we can override
+GCC_SRC=${GCC_SRC:-$BUILDDIR/gcc}
+BINUTILS_SRC=${BINUTILS_SRC:-$BUILDDIR/binutils-gdb}
+GDB_SRC=${GDB_SRC:-$BUILDDIR/binutils-gdb}
+NEWLIB_SRC=${NEWLIB_SRC:-$BUILDDIR/newlib}
+
+for src in $GCC_SRC $BINUTILS_SRC $GDB_SRC $NEWLIB_SRC; do
+  if [ ! -d $src ]; then
+    echo "ERROR: Missing source dir for: $src"
+    echo "Make sure you have git cloned and tarbals extracted for:"
+    echo "  gcc:      $GCC_SRC"
+    echo "  binutils: $BINUTILS_SRC"
+    echo "  gdb:      $GDB_SRC"
+    echo "  newlib:   $NEWLIB_SRC"
+    exit 1
+  fi
+done
 
 # where stuff is installed to (prefix vs sysroot?)
 INSTALLDIR=${INSTALLDIR:-$BUILDDIR/local}
