glibc: Allow overriding source directories during build

--- a/toolchains/glibc.config
+++ b/toolchains/glibc.config
@@ -15,27 +15,42 @@
 
 # This directories we will use!
 
-# Linux for headers installed into sysroot
-LINUXDIR=$HOME/work/linux
-
 # BUILDDIR where evertying lives
 #  - /gcc          - my gcc git repo
 #  - /binutils-gdb - my binutils git repo
 #  - /glibc        - my glibc git repo
 #  - /build-*      - build temporary files
-BUILDDIR=$HOME/work/gnu-toolchain
+BUILDDIR=${BUILDDIR:-$HOME/work/gnu-toolchain}
+# Source locations, which we can override
+GCC_SRC=${GCC_SRC:-$BUILDDIR/gcc}
+BINUTILS_SRC=${BINUTILS_SRC:-$BUILDDIR/binutils-gdb}
+GLIBC_SRC=${NEWLIB_SRC:-$BUILDDIR/glibc}
+# Linux for headers installed into sysroot
+LINUX_SRC=${LINUX_SRC:-$HOME/work/linux}
+
+for src in $GCC_SRC $BINUTILS_SRC $GLIBC_SRC $LINUX_SRC; do
+  if [ ! -d $src ]; then
+    echo "ERROR: Missing source dir for: $src"
+    echo "Make sure you have git cloned and tarbals extracted for:"
+    echo "  gcc:      $GCC_SRC"
+    echo "  binutils: $BINUTILS_SRC"
+    echo "  glibc:    $GLIBC_SRC"
+    echo "  linux:    $LINUX_SRC"
+    exit 1
+  fi
+done
 
 # QEMU location to qemu binaries used for testing
 QEMU=$HOME/work/openrisc/qemu
 
-# Where we live
+# Where busybox lives
 OR1K_UTILS=$HOME/work/openrisc/or1k-utils
 
-# BUSY box for chroot environment
+# busybox for chroot environment
 BUSYBOX=$OR1K_UTILS/initramfs/bin/busybox
 
 # where stuff is installed to (prefix vs sysroot?)
-INSTALLDIR=$BUILDDIR/local
+INSTALLDIR=${INSTALLDIR:-$BUILDDIR/local}
 SYSROOTDIR=$BUILDDIR/sysroot
 
 # Cross compile toolchain
@@ -48,7 +63,7 @@ CROSS=${CROSS:-or1k-smh-linux-gnu}
 #CROSS=or1k-smhfpu-linux-gnu
 
 # Argument for make -j${THREADS}
-THREADS=12
+THREADS=$(nproc)
 
 # Optional for test notifications
 MAILTO=${MAILTO:-shorne@gmail.com}
@@ -63,7 +78,7 @@ TIMEOUTFACTOR=${TIMEOUTFACTOR:-10}
 mkdir -p $INSTALLDIR
 mkdir -p $SYSROOTDIR
 
-export PATH=$INSTALLDIR/bin:$OR1K_UTILS/glibc:$PATH
+export PATH=$INSTALLDIR/bin:$PATH
 
 # Clean up compiler flags
 #export CFLAGS="-g -Og"
