glibc: Fix source paths

--- a/toolchains/glibc.config
+++ b/toolchains/glibc.config
@@ -24,7 +24,7 @@ BUILDDIR=${BUILDDIR:-$HOME/work/gnu-toolchain}
 # Source locations, which we can override
 GCC_SRC=${GCC_SRC:-$BUILDDIR/gcc}
 BINUTILS_SRC=${BINUTILS_SRC:-$BUILDDIR/binutils-gdb}
-GLIBC_SRC=${NEWLIB_SRC:-$BUILDDIR/glibc}
+GLIBC_SRC=${GLIBC_SRC:-$BUILDDIR/glibc}
 # Linux for headers installed into sysroot
 LINUX_SRC=${LINUX_SRC:-$HOME/work/linux}
 
