toolchains: Allow overriding TARGET for elf, use abi fpu/multicore

--- a/toolchains/musl.config
+++ b/toolchains/musl.config
@@ -19,7 +19,7 @@ THREADS=$(nproc)
 #  - vendor - smh for me
 #  - os     - linux
 #  - abi    - musl
-CROSS=or1k-smh-linux-musl
+CROSS=${CROSS:-or1k-smh-linux-musl}
 
 # Optional for test notifications
 MAILTO=${MAILTO:-shorne@gmail.com}
