--- a/toolchains/newlib.config
+++ b/toolchains/newlib.config
@@ -47,7 +47,7 @@ INSTALLDIR=${INSTALLDIR:-$BUILDDIR/local}
 #  - vendor -
 #  - os     - elf for bare metal
 #  - abi    -
-CROSS=or1k-elf
+CROSS=${CROSS:-or1k-elf}
 
 # Argument for make -j${THREADS}
 THREADS=12
