toolchains: Keep one log per cross pattern

--- a/toolchains/newlib.config
+++ b/toolchains/newlib.config
@@ -50,7 +50,7 @@ INSTALLDIR=${INSTALLDIR:-$BUILDDIR/local}
 CROSS=${CROSS:-or1k-elf}
 
 # Argument for make -j${THREADS}
-THREADS=12
+THREADS=$(nproc)
 
 # Optional for test notifications
 MAILTO=${MAILTO:-shorne@gmail.com}
