busybox: use BUILDDIR for busybox output
This also protects from the rm -rf deleteing everything it
can under /* if $OUTPUT_DIR was not defined.

--- a/busybox/busybox.config
+++ b/busybox/busybox.config
@@ -1,7 +1,10 @@
 # Config for tests and build
 
 # Location where you have the busybox source
-BUSYBOX_SRC=${BUSYBOX_SRC:-$HOME/work/openrisc/busybox}
+# - /busybox        - busybox repo
+# - /busybox-rootfs - output of busybox rootfst
+BUILDDIR=${BUILDDIR:-$HOME/work/openrisc}
+BUSYBOX_SRC=${BUSYBOX_SRC:-$BUILDDIR/busybox}
 CROSSTOOL=${CROSSTOOL:-or1k-buildroot-linux-musl-}
 
 if [ ! -d $BUSYBOX_SRC ]; then
@@ -13,5 +16,3 @@ fi
 
 # Location of your libc (if you want dynamic executables)
 LIBC=${LIBC:-$HOME/work/openrisc/musl-cross-make/output/or1k-smh-linux-musl/lib}
-
-OUTPUT_DIR=${OUTPUT_DIR:-$HOME/work/openrisc/busybox-rootfs}
