glibc: Make sure we package sysroot with toolchain
This is needed for the linux header files as well as
the system libs used for rootfs files.

--- a/toolchains/glibc.config
+++ b/toolchains/glibc.config
@@ -49,10 +49,6 @@ OR1K_UTILS=$HOME/work/openrisc/or1k-utils
 # busybox for chroot environment
 BUSYBOX=$OR1K_UTILS/initramfs/bin/busybox
 
-# where stuff is installed to (prefix vs sysroot?)
-INSTALLDIR=${INSTALLDIR:-$BUILDDIR/local}
-SYSROOTDIR=$BUILDDIR/sysroot
-
 # Cross compile toolchain
 #  - target (arch)-(vendor)-(os)-(abi)
 #  - arch   - openrisc or1k
@@ -61,6 +57,10 @@ SYSROOTDIR=$BUILDDIR/sysroot
 #  - abi    - gnu for glibc
 CROSS=${CROSS:-or1k-smh-linux-gnu}
 #CROSS=or1k-smhfpu-linux-gnu
+
+# where stuff is installed to (prefix vs sysroot?)
+INSTALLDIR=${INSTALLDIR:-$BUILDDIR/local}
+SYSROOTDIR=$INSTALLDIR/$CROSS/sysroot
 
 # Argument for make -j${THREADS}
 THREADS=$(nproc)
