busybox: Lookup busybox libc stuff automatically

--- a/busybox/busybox.config
+++ b/busybox/busybox.config
@@ -5,7 +5,7 @@
 # - /busybox-rootfs - output of busybox rootfst
 BUILDDIR=${BUILDDIR:-$HOME/work/openrisc}
 BUSYBOX_SRC=${BUSYBOX_SRC:-$BUILDDIR/busybox}
-CROSSTOOL=${CROSSTOOL:-or1k-buildroot-linux-musl-}
+CROSSTOOL=${CROSSTOOL:-or1k-none-linux-musl-}
 
 if [ ! -d $BUSYBOX_SRC ]; then
   echo "ERROR: Missing source dir for: $BUSYBOX_SRC"
@@ -13,6 +13,3 @@ if [ ! -d $BUSYBOX_SRC ]; then
   echo "  busybox:  $BUSYBOX_SRC"
   exit 1
 fi
-
-# Location of your libc (if you want dynamic executables)
-LIBC=${LIBC:-$HOME/work/openrisc/musl-cross-make/output/or1k-smh-linux-musl/lib}
