buildroot: Add new overlay for glibc testing with shorne user

--- a/buildroot/configs/qemu_or1k_shorne_defconfig
+++ b/buildroot/configs/qemu_or1k_shorne_defconfig
@@ -7,7 +7,8 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_ISSUE="Welcome to Linux on OpenRISC"
 BR2_INIT_SYSV=y
 BR2_SYSTEM_BIN_SH_BASH=y
-BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_OR1K_UTILS_PATH)/board/qemu_or1k/rootfs_overlay"
+BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_OR1K_UTILS_PATH)/board/qemu_or1k_shorne/users"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_OR1K_UTILS_PATH)/board/qemu_or1k/rootfs_overlay $(BR2_EXTERNAL_OR1K_UTILS_PATH)/board/qemu_or1k_shorne/rootfs_overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_OR1K_UTILS_PATH)/board/qemu_or1k/post-build.sh"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_DEBUGGER=y
