--- a/toolchains/glibc.config
+++ b/toolchains/glibc.config
@@ -83,6 +83,7 @@ export PATH=$INSTALLDIR/bin:$PATH
 # Clean up compiler flags
 #export CFLAGS="-g -Og"
 export CFLAGS="-O2"
+export CXXFLAGS="-O2"
 export LDFLAGS=""
 
 # Just run glibc.build
